# Cozy-Cauldron

./: Contributions  Purchase Log  README.md
.github/workflows/: PhillipTimeLoggedActions.txt
Contributions/: Contributions.txt
Hardware/: Buttons.cpp  Buttons.h  CMakeLists.txt  IMU.cpp  IMU.h  Joystick.cpp  Joystick.h  README.md  imu_pico_output.c
Hardware/IMU_output/: imu_copy.c  imu_pico_output.c  imu_pico_output.uf2  motion_data.csv  serialToCSV.py
Hardware/buttonsJoystickTest/: CMakeLists.txt  buttonsJoystickTest.cpp
Hardware/buttonsJoystickTest/libraries/: Buttons.cpp  Buttons.h  Joystick.cpp  Joystick.h
Hardware/final/: serialToCSV.py
ML/: README.md  desktop.ini  generateLabeled.ipynb  generateUserData.ipynb  gesture_classifier.pkl  gesture_samples.csv  gestures_data.cpp  gestures_samples legend.txt  improvedSampling.ipynb  infPipe.py  labeled_gestures.csv  main.cpp  pipelinetesting.ipynb  readfromMPUwI2C.cpp  serialToCSV.py  testGesture.ipynb  user_gesture_data.csv
ML/beta/: betaClassifier.ipynb  beta_gesture_encoder.joblib  beta_gesture_model.joblib  beta_gesture_scaler.joblib  gesture_samples.csv  inferencePipeline.ipynb
ML/final/: finalClassifier.ipynb  final_gesture_encoder.joblib  final_gesture_scaler.joblib  final_gestures_dataset.csv  infPipe.py
ML/gestureML/: gesture.csv  inferencePipeline.ipynb  testGesture.ipynb
ML/old/: error_detection.cpp  gestures_data.h  gestures_recognition.cpp  main.cpp
Software/: MainCharacterAug27.fbx  MainCharacterNOTJOINED.blend  MainCharacterNOTJOINED.blend1
Software/CozyCauldron/: UpgradeLog.htm
(+232 files in other folders)
